SAP/ACSS-prereqs/VNet-with-NatGW/VNet-with-NatGW.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "metadata": {
        "description": "Deploys prerequisite networking resources for ACSS. Creates a new Virtual Network with the recommended subnets for SAP deployments. Also creates a NAT Gateway to handle outbound internet connections.",
        "author": "jasontenpenny",
        "Enablement": "https://learn.microsoft.com/en-us/azure/sap/center-sap-solutions/prepare-network"
    },
    "parameters": {
        "homeIPAddress": {
            "defaultValue": "*",
            "type": "String",
            "metadata": {
                "description": "IP address used to allow inbound RDP/SSH connections into jumpbox-subnet"
            }
        },
        "namingConvention": {
            "defaultValue": "acss-lab",
            "type": "string",
            "metadata": {
                "description": "Enter a prefix to use for naming the resources."
            }
        },
        "virtualNetworkAddressSpace": {
            "defaultValue": "10.20.0.0/16",
            "type": "String",
            "metadata": {
                "description": "The address space for the virtual network"
            }
        },
        "jumpbox-subnetAddressPrefix": {
            "defaultValue": "10.20.0.0/24",
            "type": "String",
            "metadata": {
                "description": "Address prefix for jumpbox-subnet"
            }
        },
        "app-subnetAddressPrefix": {
            "defaultValue": "10.20.1.0/24",
            "type": "String",
            "metadata": {
                "description": "Address prefix for app-subnet"
            }
        },
        "db-subnetAddressPrefix": {
            "defaultValue": "10.20.2.0/24",
            "type": "String",
            "metadata": {
                "description": "Address prefix for db-subnet"
            }
        }
    },
    "variables": {
        "vnet": "[concat(parameters('namingConvention'), '-vnet')]",
        "appSubnetNSG": "[concat(parameters('namingConvention'), '-app-subnet-nsg')]",
        "dbSubnetNSG": "[concat(parameters('namingConvention'), '-db-subnet-nsg')]",
        "jumpboxSubnetNSG": "[concat(parameters('namingConvention'), '-jumpbox-subnet-nsg')]",
        "natgw": "[concat(parameters('namingConvention'), '-natgw')]",
        "natgwPublicIP": "[concat(parameters('namingConvention'), '-natgw-pip')]"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-11-01",
            "name": "[variables('appSubnetNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-11-01",
            "name": "[variables('dbSubnetNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-11-01",
            "name": "[variables('jumpboxSubnetNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowConnectionsFromHomeIP",
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups/securityRules', variables('jumpboxSubnetNSG'), 'AllowConnectionsFromHomeIP')]",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "[parameters('homeIPAddress')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [
                                "3389",
                                "22"
                            ],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }   
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('jumpboxSubnetNSG'), '/AllowConnectionsFromHomeIP')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
            ],
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "sourceAddressPrefix": "[parameters('homeIPAddress')]",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [
                    "3389",
                    "22"
                ],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/natGateways",
            "apiVersion": "2022-11-01",
            "name": "[variables('natgw')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('natgwPublicIP'))]"
            ],
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "idleTimeoutInMinutes": 4,
                "publicIpAddresses": [
                    {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('natgwPublicIP'))]"
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2022-11-01",
            "name": "[variables('natgwPublicIP')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "natGateway": {
                    "id": "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
                },
                "ipAddress": "",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": [],
                "ddosSettings": {
                    "protectionMode": "VirtualNetworkInherited"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/jumpbox-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('jumpbox-subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/app-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('app-subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]"
                },
                "natGateway": {
                    "id": "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-11-01",
            "name": "[concat(variables('vnet'), '/db-subnet')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('db-subnetAddressPrefix')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]"
                },
                "natGateway": {
                    "id": "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
                },
                "serviceEndpoints": [],
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2022-11-01",
            "name": "[variables('vnet')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]",
                "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('virtualNetworkAddressSpace')]"
                    ]
                },
                "encryption": {
                    "enabled": false,
                    "enforcement": "AllowUnencrypted"
                },
                "subnets": [
                    {
                        "name": "app-subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'app-subnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('app-subnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('appSubnetNSG'))]"
                            },
                            "natGateway": {
                                "id": "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "db-subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'db-subnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('db-subnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbSubnetNSG'))]"
                            },
                            "natGateway": {
                                "id": "[resourceId('Microsoft.Network/natGateways', variables('natgw'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    },
                    {
                        "name": "jumpbox-subnet",
                        "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet'), 'jumpbox-subnet')]",
                        "properties": {
                            "addressPrefix": "[parameters('jumpbox-subnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxSubnetNSG'))]"
                            },
                            "serviceEndpoints": [],
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        },
                        "type": "Microsoft.Network/virtualNetworks/subnets"
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
            }
        }
    ]
}
